src/objects/Condition__c.object
<CustomObject>
    <description>Standard Conditions that can be used at license level</description>
    <fields>
        <fullName>Apply_To__c</fullName>
        <label>Applicable To</label>
        <picklist>
            <picklistValues>
                <fullName>Adoption Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Child Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Care Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Shelter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Description__c</fullName>
        <inlineHelpText>Detail the text that will be displayed on the License Certificate. If you need to merge with Condition Start Date, use the tag #Effective_Date#. If you need to merge with Condition Additional Description, use the tag #Add_Info#.</inlineHelpText>
        <label>Full Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Standard Condition</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Conditions_With_Applicability</fullName>
        <columns>NAME</columns>
        <columns>Full_Description__c</columns>
        <columns>Apply_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Conditions With Applicability</label>
    </listViews>
    <nameField>
        <label>Condition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Standard Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>